Add heart pressure chart on index page

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,5 +1,22 @@
 <html>
+<head>
+<title>Hear Rate application</title>
+<link rel="stylesheet" type="text/css" href="webjars/extjs/6.2.0/build/classic/theme-neptune/resources/theme-neptune-all-debug.css">
+<link rel="stylesheet" type="text/css" href="webjars/extjs/6.2.0/build/packages/charts/classic/neptune/resources/charts-all.css">
+
+<script type="text/javascript" src="webjars/extjs/6.2.0/build/ext-all-debug.js"></script>
+<script type="text/javascript" src="webjars/extjs/6.2.0/build/classic/theme-neptune/theme-neptune-debug.js"></script>
+<script type="text/javascript" src="webjars/extjs/6.2.0/build/packages/charts/classic/charts.js"></script>
+
+<script type="text/javascript">
+    Ext.application({
+        name: 'HeartRate',
+        launch: function() {
+            Ext.create('app.view.HeartRateChart');
+        }
+    });
+</script>
+</head>
 <body>
-<h2>Hello World!</h2>
 </body>
 </html>
