--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -13,6 +13,7 @@
         name: 'HeartRate',
         launch: function() {
             Ext.create('app.view.HeartRateChart');
+            Ext.create('app.view.AddHeartRateForm');
         }
     });
 </script>
