--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,12 +1,12 @@
 <html>
 <head>
 <title>Hear Rate application</title>
-<link rel="stylesheet" type="text/css" href="/webjars/extjs/6.2.0/build/classic/theme-neptune/resources/theme-neptune-all-debug.css">
-<link rel="stylesheet" type="text/css" href="/webjars/extjs/6.2.0/build/packages/charts/classic/neptune/resources/charts-all.css">
+<link rel="stylesheet" type="text/css" href="../webjars/extjs/6.2.0/build/classic/theme-neptune/resources/theme-neptune-all-debug.css">
+<link rel="stylesheet" type="text/css" href="../webjars/extjs/6.2.0/build/packages/charts/classic/neptune/resources/charts-all.css">
 
-<script type="text/javascript" src="/webjars/extjs/6.2.0/build/ext-all-debug.js"></script>
-<script type="text/javascript" src="/webjars/extjs/6.2.0/build/classic/theme-neptune/theme-neptune-debug.js"></script>
-<script type="text/javascript" src="/webjars/extjs/6.2.0/build/packages/charts/classic/charts.js"></script>
+<script type="text/javascript" src="../webjars/extjs/6.2.0/build/ext-all-debug.js"></script>
+<script type="text/javascript" src="../webjars/extjs/6.2.0/build/classic/theme-neptune/theme-neptune-debug.js"></script>
+<script type="text/javascript" src="../webjars/extjs/6.2.0/build/packages/charts/classic/charts.js"></script>
 
 <script type="text/javascript">
     Ext.application({
