--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -15,6 +15,7 @@
         Ext.application({
             name: 'HeartRate',
             launch: function () {
+                Ext.create('app.view.MainToolBar');
                 Ext.create('app.view.HeartRateChart');
                 Ext.create('app.view.AddHeartRateForm');
             }
