Added MainView container for all modules and added separate function for date range validation

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -15,9 +15,7 @@
         Ext.application({
             name: 'HeartRate',
             launch: function () {
-                Ext.create('app.view.MainToolBar');
-                Ext.create('app.view.HeartRateChart');
-                Ext.create('app.view.AddHeartRateForm');
+                Ext.create('app.view.MainView');
             }
         });
     </script>
